--- a/index.html
+++ b/index.html
@@ -3,7 +3,219 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae - [Nama Kamu]</title>
+    <title>Curriculum Vitae - [Nama Kamu]</title><!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculum Vitae - Nasya Awaliyah</title>
+    <style>
+        /* === GLOBAL STYLING === */
+        body {
+            font-family: "Poppins", Arial, sans-serif;
+            background: #f5f7fa;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+        }
+
+        header {
+            background: linear-gradient(135deg, #4a90e2, #6a5acd);
+            color: white;
+            text-align: center;
+            padding: 40px 20px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+            letter-spacing: 2px;
+        }
+
+        hr {
+            border: none;
+            height: 2px;
+            background: #ddd;
+            margin: 30px 0;
+        }
+
+        section {
+            background: white;
+            margin: 30px auto;
+            padding: 25px 30px;
+            border-radius: 12px;
+            width: 90%;
+            max-width: 800px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+
+        h2 {
+            color: #4a90e2;
+            border-left: 5px solid #4a90e2;
+            padding-left: 10px;
+            margin-bottom: 15px;
+        }
+
+        p, li {
+            font-size: 1rem;
+        }
+
+        strong {
+            color: #333;
+        }
+
+        img {
+            display: block;
+            margin-top: 15px;
+            border-radius: 12px;
+            box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+        }
+
+        /* === TABLE STYLING === */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 15px;
+            font-size: 0.95rem;
+        }
+
+        th, td {
+            padding: 10px 12px;
+            border-bottom: 1px solid #ddd;
+            text-align: center;
+        }
+
+        th {
+            background-color: #4a90e2;
+            color: white;
+        }
+
+        tr:hover {
+            background-color: #f0f8ff;
+            transition: 0.3s;
+        }
+
+        /* === LIST STYLING === */
+        ul {
+            list-style-type: "✓ ";
+            padding-left: 25px;
+        }
+
+        li {
+            margin-bottom: 8px;
+        }
+
+        /* === FOOTER === */
+        footer {
+            text-align: center;
+            padding: 20px;
+            background: #4a90e2;
+            color: white;
+            font-size: 0.9rem;
+            margin-top: 40px;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        /* === RESPONSIVE === */
+        @media (max-width: 600px) {
+            header h1 {
+                font-size: 1.8em;
+            }
+
+            section {
+                width: 95%;
+                padding: 20px;
+            }
+
+            table, th, td {
+                font-size: 0.85rem;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Curriculum Vitae</h1>
+        <p>Nasya Awaliyah</p>
+    </header>
+
+    <section>
+        <h2>Data Pribadi</h2>
+        <p><strong>Nama:</strong> Nasya Awaliyah</p>
+        <p><strong>NIM:</strong> 0110225147</p>
+        <p><strong>Program Studi:</strong> Teknik Informatika</p>
+        <p><strong>Tempat, Tanggal Lahir:</strong> Bogor, 09 Maret 2007</p>
+        <p><strong>Alamat:</strong> Jl. Raya Tajur, Kp. Tarikolot Rt/Rw.001/005</p>
+        <p><strong>Email:</strong> nasyaawaliah218@gmail.com</p>
+        <p><strong>Telepon:</strong> 0831-9231-0297</p>
+        <img src="assets/img/foto.jpg" alt="Foto Profil" width="150">
+    </section>
+
+    <section>
+        <h2>Pendidikan</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>No</th>
+                    <th>Jenjang</th>
+                    <th>Nama Sekolah / Universitas</th>
+                    <th>Tahun</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>SD</td>
+                    <td>SDN Tarikolot 03</td>
+                    <td>2013-2019</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>SMP</td>
+                    <td>SMPN 03 Citeureup</td>
+                    <td>2019-2022</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>SMA</td>
+                    <td>MAS Al-Amin</td>
+                    <td>2022-2025</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Kuliah</td>
+                    <td>STT Terpadu Nurul Fikri</td>
+                    <td>2025 - Sekarang</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
+    <section>
+        <h2>Keahlian</h2>
+        <ul>
+            <li>Microsoft Word, Excel</li>
+            <li>Desain Grafis (Canva, PowerPoint)</li>
+            <li>Microsoft Office</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Pengalaman</h2>
+        <p><strong>Praktik Pengalaman Lapangan</strong> (Februari 2023)</p>
+    </section>
+
+    <footer>
+        <p>© 2025 Nasya Awaliyah | STT Terpadu Nurul Fikri</p>
+    </footer>
+</body>
+</html>
+
 </head>
 <body>
     <header>
